<resources>
    <string name="app_name">Ñam</string>
    <string name="close_nav">Cerrar</string>
    <string name="open_nav">Abrir</string>
    <string name="menu_semanal">Menú Semanal</string>
    <string name="lista_compra">Lista de la Compra</string>
    <string name="ideas_comer">Ideas Para Comer</string>
    <string name="cambiar_idioma">Cambiar Idioma (EN/ES)</string>
    <string name="logout">Cerrar sesión</string>
    <string name="miperfil">Mi perfil</string>

    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domiengo">Domingo</string>

    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="comida">Comida</string>
    <string name="merienda">Merienda</string>
    <string name="cena">Cena</string>

    <string name="editar_menu">Editar</string>
    <string name="mensaje_menu">Introduce los platos para este día:</string>


    <string name="anadir_lista">Añadir</string>
    <string name="anadir_mensaje">Añadir a la lista...</string>
    <string name="añadido_a_la_lista">Añadido a la lista</string>
    <string name="borrar_lista">Borrar producto</string>
    <string name="mensaje_quitar">¿Quieres quitar de la lista </string>
    <string name="si_borrar_lista">Sí, borrar</string>
    <string name="producto_eliminado">Producto eliminado</string>
    <string name="anadir_lista_error">Escribe un producto primero</string>

    <string name="anadir_plato">Añadir nuevo plato</string>
    <string name="nuevo_plato">Nuevo plato</string>
    <string name="nombre_plato">Nombre del plato</string>
    <string name="breve_descripcion">Breve descripción</string>
    <string name="galeria">Elegir de la galeria</string>
    <string name="anadir_plato_error">El nombre es obligatorio</string>

    <string name="noti_comer">¿Qué hay para comer hoy?</string>
    <string name="noti_comer_sub">Revisa tu menú semanal para no olvidar tus platos :p</string>
    <string name="noti_compra">¿Vas a la compra?</string>
    <string name="noti_compra_sub">No olvides comprar </string>


    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>

    <string name="bienvenido">¡Bienvenido/a!</string>
    <string name="usuario">Introduce tu nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_s">Iniciar sesión</string>
    <string name="registar">Registrar</string>
    <string name="hola">:p Hola, </string>
    <string name="vacia_c">La contraseña no puede estar vacía</string>
    <string name="vacio_u">El nombre de usuario no puede estar vacío</string>

    <string name="supermercados">Supermercados</string>
    <string name="perfil">Mi perfil</string>
    <string name="cambios_guardados">Cambios guardados</string>
    <string name="guardando">Guardando...</string>
    <string name="permisos_denegados">Permisos denegados</string>
    <string name="hacer_foto">¡Hazte una foto!</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="error_conexion">Error de conexión</string>
    <string name="error_respuesta">Error al procesar respuesta</string>
    <string name="lista_vacia">¡¡La lista está vacía!!</string>
    <string name="app_widget_description">Lista de la compra</string>
</resources>